# ScanSage-MCP

./: .gitignore  .pre-commit-config.yaml  AI_CONTRACT.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  Dockerfile  Dockerfile.gate  Makefile  README.md  docker-compose.yml  preflight.py  projectmap.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: README.md  dev_bootstrap_matrix.md  dev_workflow.md  rulesets.json  runbook_nmap_caps_limits.md  status_code_level.md
schemas/: README.md  nmap_ingest_get_response_schema_v0.1.json  nmap_ingest_input_schema_v0.1.json  nmap_ingest_input_schema_v0.2.json  nmap_ingest_nmap_xml_input_schema_v0.1.json  nmap_ingest_public_response_schema_v0.1.json  nmap_ingest_public_response_schema_v0.2.json  nmap_ingests_list_response_schema_v0.1.json  nmap_parsed_findings_schema_v0.1.json
schemas/examples/: nmap_ingest_get_response_example_min.json  nmap_ingest_input_example_min.json  (+6 more)
scripts/: dry_run_ingest.py
specs/: FEATURE_NAME.md  ingest_nmap_xml_v0.1.md  nmap_public_ingestion_v0.1.md  nmap_real_xml_parser_v0.1.md
tests/: test_anti_hack.py  test_audit_log.py  test_dry_run_ingest.py  test_github_ruleset_contract.py  test_ingest_nmap_xml_alias.py  test_nmap_ingest_fuzz_corpus.py  test_nmap_ingest_limits.py  test_nmap_ingest_persist_e2e.py  test_nmap_ingest_records.py  test_nmap_ingest_synthetic.py  test_nmap_ingestion_public.py  test_nmap_parser_contract.py  test_nmap_real_xml_minimal.py  test_preflight_recommendations.py  test_schema_examples.py  test_smoke_server.py
tools/: forbidden_patterns_check.py
(+29 files in other folders)
