[metadata]
name = mcp-scansage
version = 0.1.0
description = Docker-first FastMCP bootstrap for ScanSage
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    jsonschema
    defusedxml

[options.packages.find]
where = src

[options.extras_require]
dev =
    ruff
    pytest
    pre-commit
